--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pinkostudio",
   "version": "0.1.0",
+  "homepage": "https://grimdvl.github.io/pinkostudio",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
